--- a/DsWorkAndroid/res/values/strings.xml
+++ b/DsWorkAndroid/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="amount">存款</string>
     <string name="sortkey">拼音</string>
     <string name="menu_add">+添加</string>
-    <string name="title_activity_demo">列表页（DemoActivity）</string>
+    <string name="title_activity_demo_main">主页面（DemoMainActivity）</string>
     <string name="title_activity_demo_detail">明细页（DemoDetailActivity）</string>
     <string name="title_activity_demo_add">添加页（DemoAddActivity)</string>
     <string name="title_activity_demo_upd">修改页（DemoUpdActivity)</string>
