--- a/DsWorkAndroid/res/values/strings.xml
+++ b/DsWorkAndroid/res/values/strings.xml
@@ -72,4 +72,11 @@
         <item>Clock</item>
     </string-array>
 
+    <!-- sql -->
+    <string-array name="createTableSql">
+        <item>CREATE TABLE person(id INTEGER PRIMARY KEY AUTOINCREMENT,name VARCHAR(2),phone VARCHAR(12) NULL, amount VARCHAR(20) NULL)</item>
+    </string-array>
+    <string-array name="updateTableSql">
+        <item>ALTER TABLE person ADD sortkey VARCHAR</item>
+    </string-array>
 </resources>
