--- a/DsWorkAndroid/res/values/strings.xml
+++ b/DsWorkAndroid/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="title_section3">Section 3</string>
     <string name="title_activity_slidingmenu">SlidingMenuActivity</string>
     <string name="title_activity_alphabet">AlphaBar例程</string>
-    <string name="title_activity_loadmore">MoreListView例程</string>
+    <string name="title_activity_pulltorefresh">PullToRefresh例程</string>
     <string name="title_activity_oletab">OleTab例程</string>
     <string name="title_activity_fragment_demo">Fragment展开方式例程</string>
     <string name="title_activity_view_pager">ViewPager例程</string>
@@ -71,7 +71,7 @@
     </string-array>
 
     <!-- server url -->
-    <string name="projPath">http://192.168.1.107:8088/DemoJava</string>
+    <string name="projPath">http://192.168.1.101:8087/DemoJava</string>
     <!-- database sql -->
     <string-array name="createTableSql">
         <item>CREATE TABLE person(id INTEGER PRIMARY KEY AUTOINCREMENT,name VARCHAR(2),phone VARCHAR(12) NULL, amount VARCHAR(20) NULL, sortkey VARCHAR NULL)</item>
